--- a/style.css
+++ b/style.css
@@ -1,20 +1,26 @@
 
+* {
+    box-sizing: border-box;
+}
 
-body
-{
-    
-    background: rgba(121, 121, 199, 0.637);
-    color: #380f0f;
+/* Create three equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
 }
-#myName 
-{
-    margin: auto;
-    width: 20%;
-    border: 5px;
-    border-color: red;
-    color: blue;
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
-.facts
-{
-    color: green;
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+    }
 }
