--- a/css/resume.css
+++ b/css/resume.css
@@ -199,12 +199,49 @@ a:hover, a:focus, a:active {
     display:block;
     top: 0.2em;
     margin-left:-1.6em;
+    margin-right: 0.1em;
     background-position:center;
     background-repeat:no-repeat;
     background-size:90%;
     display:inline-block;
-    background-image: url('./blender.svg');
-    fill: #aa00ff;
+    background-image: url('../svg/blender.svg');
     height: 20px;
     width: 20px;
 }
+
+/* Dropdown Button */
+.dropbtn {
+  /* padding: 16px; */
+  /* font-size: 16px; */
+  color: inherit;
+  border: none;
+}
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #939393;
+  min-width: 800px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+/* Links inside the dropdown */
+/* .dropdown-content a {
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+} */
+
+/* Change color of dropdown links on hover */
+/* .dropdown-content a:hover {background-color: #ddd;} */
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: rgba(0, 0, 242, 0.5);}
