--- a/css/resume.css
+++ b/css/resume.css
@@ -4,10 +4,31 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-resume/blob/master/LICENSE)
  */
 
+:root{
+  --primary-text-color: #2a3aa4;
+  --firstName-text-color: #356492;
+  --lastName-text-color: rgb(12, 14, 158);
+  --headers-text-color: #356492;
+  --socialIcon-color: white;
+  --socialIcon-background: #037ffa;
+  --socialIcon-background-hover: #58a9eb;
+  --sideNav-active: rgb(12, 14, 158);
+  --image-border: rgba(255, 255, 255, 0.2);
+  --sideBar-background: rgb(78, 122, 243);
+  --email-color: rgb(46, 99, 245);
+
+   /* Not being used */
+   --devIcons: rgb(96, 56, 189);
+   --dropdown-hover: rgba(0, 0, 242, 0.5);
+   --box-shadow: rgba(0,0,0,0.2);
+   --dropdown-background: #939393;
+}
+
+
 body {
   font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   padding-top: 54px;
-  color: #2a3aa4;
+  color: var(--primary-text-color);
 }
 
 @media (min-width: 992px) {
@@ -17,7 +38,13 @@ body {
   }
 }
 
-h1,
+h1{
+  font-family: 'Saira Extra Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--firstName-text-color)
+}
+
 h2,
 h3,
 h4,
@@ -26,7 +53,7 @@ h6 {
   font-family: 'Saira Extra Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   font-weight: 700;
   text-transform: uppercase;
-  color: #356492;
+  color: var(--headers-text-color)
 }
 
 h1 {
@@ -58,8 +85,8 @@ p.lead {
   display: inline-block;
   height: 3.5rem;
   width: 3.5rem;
-  background-color: #037ffa;
-  color: #fff !important;
+  background-color: var(--socialIcon-background);
+  color: var(--socialIcon-color) !important;
   border-radius: 100%;
   text-align: center;
   font-size: 1.5rem;
@@ -72,7 +99,7 @@ p.lead {
 }
 
 .social-icons a:hover {
-  background-color: #58a9eb;
+  background-color: var(--socialIcon-background-hover);
 }
 
 .dev-icons {
@@ -80,7 +107,7 @@ p.lead {
 }
 
 .dev-icons .list-inline-item i:hover {
-  color: rgb(96, 56, 189);
+  color: var(--devIcons);
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -90,7 +117,7 @@ p.lead {
 }
 
 #sideNav .navbar-toggler:focus {
-  outline-color: #b52fc4;
+  outline-color: var(--sideNav-active);
 }
 
 @media (min-width: 992px) {
@@ -109,6 +136,7 @@ p.lead {
     width: 17rem;
     height: 100vh;
   }
+
   #sideNav .navbar-brand {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -116,11 +144,13 @@ p.lead {
     margin: auto auto 0;
     padding: 0.5rem;
   }
+
   #sideNav .navbar-brand .img-profile {
     max-width: 10rem;
     max-height: 10rem;
-    border: 0.5rem solid rgba(255, 255, 255, 0.2);
+    border: 0.5rem solid var(--image-border);
   }
+
   #sideNav .navbar-collapse {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -134,6 +164,7 @@ p.lead {
     width: 100%;
     margin-bottom: auto;
   }
+
   #sideNav .navbar-collapse .navbar-nav {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -141,9 +172,11 @@ p.lead {
     flex-direction: column;
     width: 100%;
   }
+
   #sideNav .navbar-collapse .navbar-nav .nav-item {
     display: block;
   }
+
   #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
     display: block;
   }
@@ -163,6 +196,7 @@ section.resume-section .resume-item .resume-date {
   section.resume-section {
     min-height: 100vh;
   }
+
   section.resume-section .resume-item .resume-date {
     min-width: 18rem;
   }
@@ -176,26 +210,22 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: rgb(78, 122, 243) !important;
+  background-color: var(--sideBar-background) !important;
 }
 
 .text-primary {
-  color: rgb(12, 14, 158) !important;
+  color: var(--lastName-text-color) !important;
 }
 
 a {
-  color: rgb(46, 99, 245);
+  color: var(--email-color);
 }
 
 a:hover, a:focus, a:active {
   color: #5c7add;
 }
 
-/* border just to show what size the canvas is for the object */
-/* background image the location of the svg */
-/* the actual width and height you want the object to be */
 .blender{
-    /* border:solid 1px #037ffa; */
     display:block;
     top: 0.2em;
     margin-left:-1.6em;
@@ -210,13 +240,11 @@ a:hover, a:focus, a:active {
 }
 
 .blender-box{
-  /* border: 1px solid blue; */
   position: relative;
   display:block;
   width: 100%;
   height: 300px;
 }
-
 
 .img1{
   background-image: url(https://cdn.thingiverse.com/renders/75/da/54/54/40/e40128854231cf98eea60302b5a5b479_preview_featured.jpg);
@@ -228,7 +256,6 @@ a:hover, a:focus, a:active {
   float: left;
 }
 
-
 .img2{
   background-image: url(https://cdn.thingiverse.com/renders/75/da/54/54/40/e40128854231cf98eea60302b5a5b479_preview_featured.jpg);
   background-size: cover;
@@ -238,6 +265,7 @@ a:hover, a:focus, a:active {
   height: 300px;
   float: left;
 }
+
 .img3{
   background-image: url(https://cdn.thingiverse.com/renders/75/da/54/54/40/e40128854231cf98eea60302b5a5b479_preview_featured.jpg);
   background-size: cover;
@@ -247,6 +275,7 @@ a:hover, a:focus, a:active {
   height: 300px;
   float: left;
 }
+
 .img4{
   background-image: url(https://cdn.thingiverse.com/renders/75/da/54/54/40/e40128854231cf98eea60302b5a5b479_preview_featured.jpg);
   background-size: cover;
@@ -257,69 +286,58 @@ a:hover, a:focus, a:active {
   float: left;
 }
 
-/* Dropdown Button */
 .dropbtn {
-  /* padding: 16px; */
-  /* font-size: 16px; */
   color: inherit;
   border: none;
 }
-/* The container <div> - needed to position the dropdown content */
+
 .dropdown {
   position: relative;
   display: inline-block;
 }
-/* Dropdown Content (Hidden by Default) */
+
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #939393;
+  background-color: var(--dropdown-background);
   min-width: 800px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px var(--box-shadow);
   z-index: 1;
 }
-/* Links inside the dropdown */
-/* .dropdown-content a {
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-} */
-
-/* Change color of dropdown links on hover */
-/* .dropdown-content a:hover {background-color: #ddd;} */
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {display: block;}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: rgba(0, 0, 242, 0.5);}
-
+.dropdown:hover .dropbtn {background-color: var(--dropdown-hover)}
 
 .gist {
   overflow: none;
 }
+
 .gist :first-child{
   max-width: 100%;
 }
+
 .gist-data {
-  /* max-height: 400px; */
-  /* max-width: fit-content; */
   overflow: none;
 }
+
 .gist .blob-wrapper.data {
   max-height: 200px;
   max-width: 500px;
   overflow: scroll;
 }
+
 .gist-meta{
   /* affect the bottom bar */
   visibility: hidden;
 }
+
 .gist-file{
   max-height: 200px;
   max-width: 500px;
 }
-
 
 .float-left
 {
